--- a/EmpleosDoApp/app/src/main/AndroidManifest.xml
+++ b/EmpleosDoApp/app/src/main/AndroidManifest.xml
@@ -3,7 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.ucne.empleosdoapp">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+
     <application
+        android:name=".EmpleosDoApp"
+        android:usesCleartextTraffic="true"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -25,5 +30,4 @@
             </intent-filter>
         </activity>
     </application>
-
 </manifest>
