--- a/EmpleosDoApp/app/build.gradle
+++ b/EmpleosDoApp/app/build.gradle
@@ -58,6 +58,9 @@ dependencies {
 
     implementation 'androidx.compose.material:material:1.0.0-alpha14'
 
+    //refresh
+    implementation'com.google.accompanist:accompanist-swiperefresh:0.19.0'
+
     //empuñadura
     implementation "com.google.dagger:hilt-android:$hilt_version"
     kapt "com.google.dagger:hilt-compiler:$hilt_version"
