--- a/EmpleosDoApp/app/src/main/AndroidManifest.xml
+++ b/EmpleosDoApp/app/src/main/AndroidManifest.xml
@@ -22,7 +22,8 @@
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.EmpleosDoApp">
+            android:theme="@style/Theme.EmpleosDoApp"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
